put header in store and fix some spacing things

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -13,8 +13,17 @@
   }
 }
 
+.jumbotron {
+  padding: 30px;
+}
+
 .title {
+  font-size: 50px;
   text-align: center;
+}
+
+.text {
+  font-size: 21px;
 }
 
 .text, .title, .videos-message, .support-message, .feed {
